syntax = "proto3";

option go_package = "github.com/hexolan/stocklet/internal/pkg/protobuf/warehouse/v1;warehouse_v1";

package stocklet.warehouse.v1;

message ProductStock {
    string product_id = 1;
    int64 quantity = 2;
}